# slovo-dnya

./: .env.example  .gitignore  CLAUDE.md  README.md  commandments.md  pyproject.toml  requirements.txt
lyrics/: Mistmorn - Божевілля двох _Madness Of Two_.txt  Mistmorn - Дідько_ я у розпачі___ _Damn_ I_m desperate____.txt  Mistmorn - Затишок _Comfort_.txt  Mistmorn - Згаслі вогні _Extinguished lights_.txt  Mistmorn - Панельні будівлі _Panel buildings_.txt  Mistmorn - Сподіваюсь_ з тобою все гаразд _I hope you_re okay_.txt  Re-read - Весна зачинених дверей _Spring of the Closed Doors_.txt  Re-read - Додому _Homeward_ _remastered 2024_.txt  Re-read - Марево _Mirage_.txt  Re-read - У теплі літніх днів _In the warmth of summer days_.txt  corn wave - манго нектар _mango nectar_.txt  sample_song.txt  Один в каное _One in a canoe_ - Будь мені кимось _Be Someone To Me_.txt  Один в каное _One in a canoe_ - Демони _The Demons_.txt  Один в каное _One in a canoe_ - Небо _The Sky_.txt  Один в каное _One in a canoe_ - Пообіцяй мені _Promise me_.txt  Один в каное _One in a canoe_ - У мене немає дому _I have no home_.txt  Один в каное _One in a canoe_ - Човен _The Boat_.txt
slovo/: __init__.py  api.py  cli.py  db.py  genius.py  ingest.py  notify.py  study.py  translation.py  translit.py  wod.py
tests/: __init__.py  conftest.py  test_api.py  test_db.py  test_export.py  test_genius.py  test_ingest.py  test_study.py  test_translation.py  test_translit.py  test_wod.py
